# PlexAniSync

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  AGENTS.md  Makefile  Pipfile  PlexAniSync.py  README.md  TautulliSyncHelper.py  _version.py  anilist.py  config.json  custom_mappings.ini  custom_mappings.ini.example  custom_mappings.py  custom_mappings.yaml.example  custom_mappings_schema.json  custom_mappings_schema.yaml  graphql.py  index.yaml  plexmodule.py  pyproject.toml  remote_mappings.yaml.example  remote_mappings_schema.yaml  renovate.json  renovate.json5  requirements.txt  settings.ini.example  sync.py  telegram.py
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
.github/workflows/: CI.yml  build-docker-image-local.yml  build-docker-image.yml  docker-publish-plexanisync.yml  docker-publish-tautulli.yml  package-helm-chart.yml  prune-docker-images.yml  publish-helm-chart.yml  update-requirements.yml
Docker/Builder/: Dockerfile
Docker/PlexAniSync/: Dockerfile  README.md
Docker/PlexAniSync/run/: runsync.py  runsync.sh  settingsupdater.py  update.sh
Docker/Tautulli/: Dockerfile  README.md
Docker/Tautulli/run/: settingsupdater.py  start.sh
Helm/: values.yaml
Helm/plexanisync/: Chart.yaml  README.md  values.yaml
Helm/plexanisync/templates/: _commom.tpl  cronjob.yaml  deployment.yaml  secret.yaml
Helm/templates/: configmap.yaml
Kubernetes/helm/: README.md
Kubernetes/helm/templates/: deployment.yaml
Libs/: anilist.py  plexmodule.py
Scripts/: PlexAniSync.py  TautulliSyncHelper.ps1  TautulliSyncHelper.py  anilist-plex-sync.service  anilist-plex-sync.timer
assets/: TautulliSyncHelper.ps1  setup.cfg
data/: anilist-schema.json
docker/PlexAniSync/: Dockerfile  README.md
docker/PlexAniSync/run/: runsync.sh  update.sh
docker/Tautulli/: Dockerfile  README.md
docker/Tautulli/run/: start.sh
misc/: config.py  log.py
notifications/: __init__.py  apprise.py  pushover.py  slack.py
old_src/: PlexAniSync.py
plexanisync/: anilist.py  anilist_schema.py  custom_mappings.py  graphql.py  logger_adapter.py  plexmodule.py  version.py
scripts/: PlexAniSync.py  TautulliSyncHelper.ps1  TautulliSyncHelper.py  anilist-plex-sync.service  anilist-plex-sync.timer  settingsupdater.py
src/: PlexAniSync.py  TautulliSyncHelper.py  anilist.py  plexmodule.py
tests/: test_custom_mappings.py  test_graphql.py
